--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             z-index: 1;
         }
 
+        .special-button {
+            background: #e74c3c;
+        }
+
         .background {
             position: fixed;
             top: 0;
@@ -151,6 +155,22 @@
                 anchor.appendChild(button);
                 buttonContainer.appendChild(anchor);
             });
+
+            // Create special button
+            const specialButton = document.createElement('button');
+            specialButton.className = 'fancy-button special-button'; // Apply special styling
+            specialButton.innerHTML = `<span>Special Launch</span>`;
+            specialButton.onclick = () => {
+                const win = window.open('about:blank', '_blank');
+                const url = "https://games.bwuce.com";
+                const iframe = win.document.createElement('iframe');
+                iframe.style.width = "100%";
+                iframe.style.height = "100%";
+                iframe.style.border = "none";
+                iframe.src = url;
+                win.document.body.appendChild(iframe);
+            };
+            buttonContainer.appendChild(specialButton);
         });
     </script>
 </body>
