--- a/eaglercraft.html
+++ b/eaglercraft.html
@@ -19,6 +19,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://eaglercraft4all.netlify.app/" frameborder="0"></iframe>
+    <iframe src="https://playeaglercraft.netlify.app/" frameborder="0"></iframe>
 </body>
 </html>
