--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
                 'Push the box', 'Stickman hook', 'Down the hill', 'Tag', 'Doodle jump',
                 'Football masters', 'Basketball legends', 'Idle mining empire',
                 'Fruit ninja', 'Monkey mart', 'Run 3', 'Yohoho.io', 'Tunnel rush',
-                'Tunnel rush 2', 'Mr bullet', 'Temple run', 'Solitaire', 'OvO', 'Crossy road','Grindcraft', 'Clicker heroes', 'Bitlife'
+                'Tunnel rush 2', 'Mr bullet', 'Temple run', 'Solitaire', 'OvO', 
+                'Crossy road','Grindcraft', 'Clicker heroes', 'Bitlife', 
+                'Thorns and balloons', 
             ];
 
             // Generate buttons with the names from the array
